bynkc/tests/fixtures/negative/379_test_unknown_route/src/demo/api.bynk
context demo.api
type Title = String where NonEmpty
service api from http {
  on GET("/items") () -> Effect[HttpResult[Title]] by v: Visitor {
    Ok("x")
  }
}
